Update theme generator workflow to unify CSS generation and update HTML references

--- a/css/themes/theme-hourly.css
+++ b/css/themes/theme-hourly.css
@@ -50,6 +50,20 @@ h1 {
   font-weight: 700;
 }
 
+h2 {
+  font-size: 2em;
+}
+
+h3 {
+  font-size: 1.5em;
+}
+
+p {
+  line-height: 1.6;
+  color: #d0d0d0;
+}
+
+
 .lead {
   color: #555;
 }
